[BFN] https://test.kuali.org/jira/browse/KRAFUNC-25 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6764 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-payments-reports-terms.html
+++ b/kra-awa-dev/aw-payments-reports-terms.html
@@ -278,7 +278,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                               </select>
                             </div></td>
                           <td class="infoline"><div align="center">
-                              <input name="textfield" type="text" id="textfield" size="35" />
+                              <select>
+                                <option value="0" selected="selected">select</option>
+                                <option value="1">Godfrey, Alberta D</option>
+                                <option value="2">Grants Management</option>
+                                <option value="3">Coltrane, John</option>
+                                <option value="4">Office of Tech. Transfer</option>
+                                <option value="5">Albright, Gerald</option>
+                               </select>
                               <img src="../images/searchicon.gif" alt="asdf" width="16" height="16" /></div></td>
                           <td class="infoline"><div align="center">
                               <input name="textfield" type="text" id="textfield" size="5" />
@@ -404,7 +411,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                               </select>
                             </div></td>
                           <td class="infoline"><div align="center">
-                              <input name="textfield" type="text" id="textfield" size="35" />
+                              <select>
+                                <option value="0" selected="selected">select</option>
+                                <option value="1">Godfrey, Alberta D</option>
+                                <option value="2">Grants Management</option>
+                                <option value="3">Coltrane, John</option>
+                                <option value="4">Office of Tech. Transfer</option>
+                                <option value="5">Albright, Gerald</option>
+                               </select>
                               <img src="../images/searchicon.gif" alt="asdf" width="16" height="16" /></div></td>
                           <td class="infoline"><div align="center">
                               <input name="textfield" type="text" id="textfield" size="5" />
@@ -742,7 +756,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <th><div align="center">Add:</div></th>
                             <td class="infoline"><div align="center"></div></td>
                             <td class="infoline"><div align="center">
-                                <input name="textfield" type="text" id="textfield" size="14" />
+                                <select>
+                                    <option value="0" selected="selected">select</option>
+                                    <option value="1">Godfrey, Alberta D</option>
+                                    <option value="2">Grants Management</option>
+                                    <option value="3">Coltrane, John</option>
+                                    <option value="4">Office of Tech. Transfer</option>
+                                    <option value="5">Albright, Gerald</option>
+                                </select>
                                 <img src="../images/searchicon.gif" alt="asdf" width="16" height="16" /></div></td>
                             <td class="infoline"><div align="center">
                                 <input name="textfield" type="text" id="textfield" size="5" />
@@ -1115,7 +1136,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <th><div align="center">Add:</div></th>
                             <td class="infoline"><div align="center"></div></td>
                             <td class="infoline"><div align="center">
-                                <input name="textfield" type="text" id="textfield" size="14" />
+                                <select>
+                                    <option value="0" selected="selected">select</option>
+                                    <option value="1">Godfrey, Alberta D</option>
+                                    <option value="2">Grants Management</option>
+                                    <option value="3">Coltrane, John</option>
+                                    <option value="4">Office of Tech. Transfer</option>
+                                    <option value="5">Albright, Gerald</option>
+                                </select>
                                 <img src="../images/searchicon.gif" alt="asdf" width="16" height="16" /></div></td>
                             <td class="infoline"><div align="center">
                                 <input name="textfield" type="text" id="textfield" size="5" />
@@ -1740,7 +1768,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <th><div align="center">Add:</div></th>
                             <td class="infoline"><div align="center"></div></td>
                             <td class="infoline"><div align="center">
-                                <input name="textfield" type="text" id="textfield" size="14" />
+                                <select>
+                                    <option value="0" selected="selected">select</option>
+                                    <option value="1">Godfrey, Alberta D</option>
+                                    <option value="2">Grants Management</option>
+                                    <option value="3">Coltrane, John</option>
+                                    <option value="4">Office of Tech. Transfer</option>
+                                    <option value="5">Albright, Gerald</option>
+                                </select>
                                 <img src="../images/searchicon.gif" alt="asdf" width="16" height="16" /></div></td>
                             <td class="infoline"><div align="center">
                                 <input name="textfield" type="text" id="textfield" size="5" />
@@ -2331,7 +2366,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <th><div align="center">Add:</div></th>
                             <td class="infoline"><div align="center"></div></td>
                             <td class="infoline"><div align="center">
-                                <input name="textfield" type="text" id="textfield" size="14" />
+                                <select>
+                                    <option value="0" selected="selected">select</option>
+                                    <option value="1">Godfrey, Alberta D</option>
+                                    <option value="2">Grants Management</option>
+                                    <option value="3">Coltrane, John</option>
+                                    <option value="4">Office of Tech. Transfer</option>
+                                    <option value="5">Albright, Gerald</option>
+                                </select>
                                 <img src="../images/searchicon.gif" alt="asdf" width="16" height="16" /></div></td>
                             <td class="infoline"><div align="center">
                                 <input name="textfield" type="text" id="textfield" size="5" />
@@ -2956,7 +2998,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <th><div align="center">Add:</div></th>
                             <td class="infoline"><div align="center"></div></td>
                             <td class="infoline"><div align="center">
-                                <input name="textfield" type="text" id="textfield" size="14" />
+                                <select>
+                                    <option value="0" selected="selected">select</option>
+                                    <option value="1">Godfrey, Alberta D</option>
+                                    <option value="2">Grants Management</option>
+                                    <option value="3">Coltrane, John</option>
+                                    <option value="4">Office of Tech. Transfer</option>
+                                    <option value="5">Albright, Gerald</option>
+                                </select>
                                 <img src="../images/searchicon.gif" alt="asdf" width="16" height="16" /></div></td>
                             <td class="infoline"><div align="center">
                                 <input name="textfield" type="text" id="textfield" size="5" />
@@ -3547,7 +3596,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <th><div align="center">Add:</div></th>
                             <td class="infoline"><div align="center"></div></td>
                             <td class="infoline"><div align="center">
-                                <input name="textfield" type="text" id="textfield" size="14" />
+                                <select>
+                                    <option value="0" selected="selected">select</option>
+                                    <option value="1">Godfrey, Alberta D</option>
+                                    <option value="2">Grants Management</option>
+                                    <option value="3">Coltrane, John</option>
+                                    <option value="4">Office of Tech. Transfer</option>
+                                    <option value="5">Albright, Gerald</option>
+                                </select>
                                 <img src="../images/searchicon.gif" alt="asdf" width="16" height="16" /></div></td>
                             <td class="infoline"><div align="center">
                                 <input name="textfield" type="text" id="textfield" size="5" />
@@ -4172,7 +4228,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <th><div align="center">Add:</div></th>
                             <td class="infoline"><div align="center"></div></td>
                             <td class="infoline"><div align="center">
-                                <input name="textfield" type="text" id="textfield" size="14" />
+                                <select>
+                                    <option value="0" selected="selected">select</option>
+                                    <option value="1">Godfrey, Alberta D</option>
+                                    <option value="2">Grants Management</option>
+                                    <option value="3">Coltrane, John</option>
+                                    <option value="4">Office of Tech. Transfer</option>
+                                    <option value="5">Albright, Gerald</option>
+                                </select>
                                 <img src="../images/searchicon.gif" alt="asdf" width="16" height="16" /></div></td>
                             <td class="infoline"><div align="center">
                                 <input name="textfield" type="text" id="textfield" size="5" />
@@ -4763,7 +4826,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <th><div align="center">Add:</div></th>
                             <td class="infoline"><div align="center"></div></td>
                             <td class="infoline"><div align="center">
-                                <input name="textfield" type="text" id="textfield" size="14" />
+                                <select>
+                                    <option value="0" selected="selected">select</option>
+                                    <option value="1">Godfrey, Alberta D</option>
+                                    <option value="2">Grants Management</option>
+                                    <option value="3">Coltrane, John</option>
+                                    <option value="4">Office of Tech. Transfer</option>
+                                    <option value="5">Albright, Gerald</option>
+                                </select>
                                 <img src="../images/searchicon.gif" alt="asdf" width="16" height="16" /></div></td>
                             <td class="infoline"><div align="center">
                                 <input name="textfield" type="text" id="textfield" size="5" />
@@ -5374,7 +5444,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <th><div align="center">Add:</div></th>
                             <td class="infoline"><div align="center"></div></td>
                             <td class="infoline"><div align="center">
-                                <input name="textfield" type="text" id="textfield" size="14" />
+                                <select>
+                                    <option value="0" selected="selected">select</option>
+                                    <option value="1">Godfrey, Alberta D</option>
+                                    <option value="2">Grants Management</option>
+                                    <option value="3">Coltrane, John</option>
+                                    <option value="4">Office of Tech. Transfer</option>
+                                    <option value="5">Albright, Gerald</option>
+                                </select>
                                 <img src="../images/searchicon.gif" alt="asdf" width="16" height="16" /></div></td>
                             <td class="infoline"><div align="center">
                                 <input name="textfield" type="text" id="textfield" size="5" />
@@ -5958,7 +6035,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <th><div align="center">Add:</div></th>
                             <td class="infoline"><div align="center"></div></td>
                             <td class="infoline"><div align="center">
-                                <input name="textfield" type="text" id="textfield" size="14" />
+                                <select>
+                                    <option value="0" selected="selected">select</option>
+                                    <option value="1">Godfrey, Alberta D</option>
+                                    <option value="2">Grants Management</option>
+                                    <option value="3">Coltrane, John</option>
+                                    <option value="4">Office of Tech. Transfer</option>
+                                    <option value="5">Albright, Gerald</option>
+                                </select>
                                 <img src="../images/searchicon.gif" alt="asdf" width="16" height="16" /></div></td>
                             <td class="infoline"><div align="center">
                                 <input name="textfield" type="text" id="textfield" size="5" />
@@ -6583,7 +6667,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <th><div align="center">Add:</div></th>
                             <td class="infoline"><div align="center"></div></td>
                             <td class="infoline"><div align="center">
-                                <input name="textfield" type="text" id="textfield" size="14" />
+                                <select>
+                                    <option value="0" selected="selected">select</option>
+                                    <option value="1">Godfrey, Alberta D</option>
+                                    <option value="2">Grants Management</option>
+                                    <option value="3">Coltrane, John</option>
+                                    <option value="4">Office of Tech. Transfer</option>
+                                    <option value="5">Albright, Gerald</option>
+                                </select>
                                 <img src="../images/searchicon.gif" alt="asdf" width="16" height="16" /></div></td>
                             <td class="infoline"><div align="center">
                                 <input name="textfield" type="text" id="textfield" size="5" />
@@ -7174,7 +7265,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             <th><div align="center">Add:</div></th>
                             <td class="infoline"><div align="center"></div></td>
                             <td class="infoline"><div align="center">
-                                <input name="textfield" type="text" id="textfield" size="14" />
+                                <select>
+                                    <option value="0" selected="selected">select</option>
+                                    <option value="1">Godfrey, Alberta D</option>
+                                    <option value="2">Grants Management</option>
+                                    <option value="3">Coltrane, John</option>
+                                    <option value="4">Office of Tech. Transfer</option>
+                                    <option value="5">Albright, Gerald</option>
+                                </select>
                                 <img src="../images/searchicon.gif" alt="asdf" width="16" height="16" /></div></td>
                             <td class="infoline"><div align="center">
                                 <input name="textfield" type="text" id="textfield" size="5" />
