[BFN] https://test.kuali.org/jira/browse/KRAFUNC-245 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6765 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/abud-parameters.html
+++ b/kra-awa-dev/abud-parameters.html
@@ -159,9 +159,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                         <th style="text-align:right;">On/Off Campus:</th>
                         <td>
                             <select id="onoffcampus">
-                                <option value="1">All On</option>
-                                <option value="2">All Off</option>
-                                <option value="3" selected="selected">Default</option>
+                                <option value="1">all on</option>
+                                <option value="2">all off</option>
+                                <option value="3" selected="selected">default</option>
                             </select>
                         </td>
                         <th style="text-align:right;">F&amp;A Rate Type</th>
