[BFN] https://test.kuali.org/jira/browse/KRAFUNC-110 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6766 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-actions.html
+++ b/kra-awa-dev/aw-actions.html
@@ -1563,44 +1563,47 @@
                     
                     	<table style="border:none;">
                         <tr>
-                          <td style="border:none; white-space:nowrap; padding:3px; vertical-align:top;"><input type="checkbox" class="nobord" name="CustomData0" value="0" checked="checked" />
-                            Address List<br />
+                          <td style="border:none; white-space:nowrap; padding:3px; vertical-align:top;">
+                          	<input type="checkbox" class="nobord" name="CustomData0" value="0" checked="checked" />
+                            Terms<br />
                             <input type="checkbox" class="nobord" name="CustomData1" value="1" checked="checked" />
-                            Closeout<br />
-                            <input type="checkbox" class="nobord" name="CustomData2" value="2" checked="checked" />
-                            Comments<br />
-                            <input type="checkbox" class="nobord" name="CustomData3" value="3" checked="checked" />
-                            Cost Share<br />
-                            <input type="checkbox" class="nobord" name="CustomData4" value="4" checked="checked" />
-                            Equipment<br />
-                            <input type="checkbox" class="nobord" name="CustomData9" value="9" checked="checked" />
-                            F&amp;A Cost<br />
-                            <input type="checkbox" class="nobord" name="CustomData5" value="5" checked="checked" />
-                            Flow Thru </td>
-                          <td style="border:none; white-space:nowrap; padding:3px; vertical-align:top;"><input type="checkbox" class="nobord" name="CustomData6" value="6" checked="checked" />
-                            Foreign Travel<br />
-                            <input type="checkbox" class="nobord" name="CustomData7" value="7" />
-                            Funding Summary<br />
-                            <input type="checkbox" class="nobord" name="CustomData8" value="8" />
-                            Hierarchy<br />
-                            <input type="checkbox" class="nobord" name="CustomData14" value="14" checked="checked" />
-                            Keywords<br />
-                            <input type="checkbox" class="nobord" name="CustomData10" value="10" checked="checked" />
-                            Other Data<br />
-                            <input type="checkbox" class="nobord" name="CustomData11" value="11" checked="checked" />
-                            Payment<br />
-                            <input type="checkbox" class="nobord" name="CustomData12" value="12" checked="checked" />
-                            Proposals Due </td>
-                          <td style="border:none; white-space:nowrap; padding:3px; vertical-align:top;"><input type="checkbox" class="nobord" name="CustomData13" value="13" checked="checked" />
-                            Reporting<br />
-                            <input type="checkbox" class="nobord" name="CustomData15" value="15" checked="checked" />
                             Special Review<br />
+                            <input type="checkbox" class="nobord" name="CustomData2" value="2" checked="checked" />
+                            Approved Equipment<br />
+                            <input type="checkbox" class="nobord" name="CustomData3" value="3" checked="checked" />
+                            Approved Foreign Travel<br />
+                            <input type="checkbox" class="nobord" name="CustomData4" value="4" checked="checked" />
+                            Approved Subawards<br />
+                            <input type="checkbox" class="nobord" name="CustomData9" value="9" checked="checked" />
+                            Cost Sharing</td>
+                          <td style="border:none; white-space:nowrap; padding:3px; vertical-align:top;">
+                          	<input type="checkbox" class="nobord" name="CustomData6" value="6" checked="checked" />
+                            F&amp;A Rates<br />
+                            <input type="checkbox" class="nobord" name="CustomData7" value="7" checked="checked" />
+                            Benefits Rates<br />
+                            <input type="checkbox" class="nobord" name="CustomData8" value="8" checked="checked" />
+                            Flow Thru<br />
+                            <input type="checkbox" class="nobord" name="CustomData14" value="14" checked="checked" />
+                            Comments<br />
+                            <input type="checkbox" class="nobord" name="CustomData10" value="10" />
+                            Funding Summary<br />
+                            <input type="checkbox" class="nobord" name="CustomData11" value="11" />
+                            Hierarchy Distributions</td>
+                          <td style="border:none; white-space:nowrap; padding:3px; vertical-align:top;">
+                          	<input type="checkbox" class="nobord" name="CustomData13" value="13" checked="checked" />
+                            Technical Reports<br />
+                            <input type="checkbox" class="nobord" name="CustomData15" value="15" checked="checked" />
+                            Reports<br />
                             <input type="checkbox" class="nobord" name="CustomData16" value="16" checked="checked" />
-                            Subaward<br />
+                            Payment<br />
                             <input type="checkbox" class="nobord" name="CustomData17" value="17" checked="checked" />
-                            Technical Reporting<br />
+                            Closeout<br />
                             <input type="checkbox" class="nobord" name="CustomData18" value="18" checked="checked" />
-                            Terms </td>
+                            Sponsor Contacts<br />
+                            <input type="checkbox" class="nobord" name="CustomData19" value="19" checked="checked" />
+                            Other Data<br />
+                            <input type="checkbox" class="nobord" name="CustomData20" value="20" checked="checked" />
+                            Keywords</td>
                         </tr>
                         <tr>
                           <td colspan="3" style="border:none; white-space:nowrap; padding:3px; vertical-align:top; text-align:center;"><span style="float:right;">Signature Required:
@@ -1617,7 +1620,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <th style="vertical-align:top; text-align:left;"> Award Change Report </th>
+                    <th style="vertical-align:top; text-align:left;">Award Modification</th>
                     <td><table style="border:none;">
                         <tr>
                           <td style="border:none; white-space:nowrap; padding:3px; text-align:right; width:130px;"> Award Version:
@@ -1633,7 +1636,9 @@
                               <option value="3" selected>00324</option>
                               <option value="2">00426</option>
                               <option value="1">005981</option>
-                            </select></td>
+                            </select>
+                            <input src="../images/arrow_refresh.png" onclick="javascript: alert('This would update the Value description and options based on the Award Version pulldown.'); return false" class="tinybutton" alt="refresh" title="Refresh" type="image" />
+                          </td>
                           <td style="border:none; white-space:nowrap; padding:3px; text-align:right;"> Signature Required:
                             <input type="checkbox" class="nobord" name="Csigreq" value="0" checked="checked" /></td>
                         </tr>
