https://test.kuali.org/jira/browse/KRAFUNC-236
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6769 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coi-bfn/coi-reporterinfo.html
+++ b/kra-coi-bfn/coi-reporterinfo.html
@@ -154,7 +154,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
         </tr>
     </table>
-    <div class="tab-container" align="center" id="G031b" style="display: none;">
+    <div class="tab-container" align="center" id="G031b" style="display: nonee;">
         <div class="h2-container">
         	<span class="subhead-left">
             	<h2>Projects</h2>
