[BFN] https://test.kuali.org/jira/browse/KRAFUNC-205 and https://test.kuali.org/jira/browse/KRAFUNC-204 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6775 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -155,7 +155,7 @@ Page
                 </table>
           </div>  <!-- end Reporting Requirements tab -->
   
-<!-- Lookup -->
+<!-- Lookup: Bring data back to page -->
 <table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
 	<tr>
     	<td style="border:none;">
@@ -170,7 +170,7 @@ Page
 <!-- Search -->
 <input src="../images/searchicon.gif" onclick="javascript: alert('This would open the search dialog.'); return false" align="top" alt="Search " title="Search " style="border:none;" type="image" />
 
-<!-- Direct Inquiry -->
+<!-- Inquiry: Lookup read only info -->
 <input name="x" src="../images/book_open.png" onclick="javascript: alert('This would show the direct inquiry dialog.'); return false" align="top" alt="Direct Inquiry" title="Direct Inquiry" style="border:none;" type="image" />
 
 <!-- Text Pop-up -->
