[BFN] https://test.kuali.org/jira/browse/KRAFUNC-204 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6778 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coi-bfn/coi-disclosure.html
+++ b/kra-coi-bfn/coi-disclosure.html
@@ -1135,6 +1135,7 @@ $(".na4").slideDown(500)}
 													$(document).ready(function(){
 														// initial state
 															$("#BFNprint").hide(0);
+															$("#C_Certification").attr("disabled", false);
 														// trigger
 															$("#BFNsubmit").click(
 																function()
