[BFN] https://test.kuali.org/jira/browse/KRAFUNC-173 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6779 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -162,7 +162,7 @@ Page
 			<input type="text" style="width:100%;" value="" />
         </td>
         <td style="border:none; width:20px; vertical-align:bottom; text-align:center;">
-			<input name="x" src="../images/searchicon.gif" onclick="javascript: alert('This would open a larger editable text area for this field.'); return false" class="tinybutton" align="top" alt="Search " title="Search " border="0" type="image" />
+			<input name="x" src="../images/searchicon.gif" onclick="javascript: alert('This would open a lookup for this field.'); return false" class="tinybutton" align="top" alt="Search " title="Search " border="0" type="image" />
 		</td>
     </tr>
 </table>   
@@ -196,7 +196,7 @@ Page
             x
         </td>
         <td style="border:none; background:none; width:20px; vertical-align:bottom;">
-            <input name="x" src="../images/openreadonly_greenarrow01.png" onclick="javascript: alert('If this were not a mock, this icon would open a read only view of the full text.'); return false" style="border:none;" alt="Expanded Read Only Text Area" type="image" />
+            <input name="x" src="../images/openreadonly_greenarrow01.png" onclick="javascript: alert('This would open a read only view of the full text.'); return false" style="border:none;" alt="Expanded Read Only Text Area" type="image" />
         </td>
     </tr>
 </table>
