[BFN] https://test.kuali.org/jira/browse/KRAFUNC-194 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6781 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-notes.html
+++ b/kra-awa-dev/aw-notes.html
@@ -334,7 +334,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             creatorem suum, ita tu deseruisti creaturam tuam.
                         </td>
                         <td><div style="text-align:center;"><input name="chkbx1" type="checkbox" alt="restricted"></div></td>
-                        <td><div align="center"><a href="#"></a></div></td>
+                        <td><div align="center"><input src="../images/tinybutton-update.gif" onclick="javascript: alert('This would update the data row.'); return false" style="border:none;" alt="update" title="Update" type="image" /></div></td>
                     </tr>
                     <tr>
                         <th scope=row>2</th>
@@ -347,7 +347,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             harenam, et dimetiantur sidereas plagas, et vestigent vias astrorum. mente sua enim quaerunt ista et ingenio, quod tu de.
                         </td>
                         <td><div style="text-align:center;"><input name="chkbx1" type="checkbox" alt="restricted"></div></td>
-                        <td><div align="center"></div></td>
+                        <td><div align="center"><input src="../images/tinybutton-update.gif" onclick="javascript: alert('This would update the data row.'); return false" style="border:none;" alt="update" title="Update" type="image" /></div></td>
                     </tr>
                 </table>
             
